# SDL-Tile-Game-2

./: CMakeLists.txt
src/: Program.cpp  Program.h  main.cpp
src/UI/: UIBaseElement.h  UIController.cpp  UIController.h  UIHealthElement.h
src/entity/: Entity.cpp  Entity.h
src/entity/components/: BulletComponent.h  CameraComponent.h  ColliderComponent.cpp  ColliderComponent.h  Component.cpp  Component.h  Components.h  ControlComponent.h  HealthComponent.h  PathComponent.h  PositionComponent.cpp  PositionComponent.h  ShootingComponent.h  VisualComponent.h
src/entity/systems/: BulletSystem.cpp  BulletSystem.h  CameraSystem.cpp  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  ControlSystem.cpp  ControlSystem.h  HealthSystem.cpp  HealthSystem.h  PathSystem.cpp  PathSystem.h  PositionSystem.cpp  PositionSystem.h  ShootingSystem.cpp  ShootingSystem.h  System.cpp  System.h  Systems.h  VisualSystem.cpp  VisualSystem.h
src/map/: Map.cpp  Map.h  Tile.cpp  Tile.h
src/misc/: CollisionDetection.cpp  Random.h  Renderer.cpp  Texture.cpp  Texture.h  TextureWrapper.cpp  TextureWrapper.h  Vector2D.cpp  Vector2D.h
src/state/: GameplayState.cpp  GameplayState.h  State.cpp  State.h
